Добавил метод в репозитории, а так-же немного поменял структуру файлов в домене

--- a/src/Domain/Domain.csproj
+++ b/src/Domain/Domain.csproj
@@ -6,4 +6,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Users\Aggregates\Account\" />
+    <Folder Include="Users\Aggregates\User\" />
+  </ItemGroup>
+
 </Project>
