Сильно измененил структуру сборки API; Переименование; Теперь контроллеры принимают объект {ControllerName}{Method}Request и отдают {ControllerName}{Method}Response (пока что сделал только для команд; Так-же сделал объект ErrorResponse для любых других ответов; Теперь в зависимости от результата хендлера, возвращаются разные результаты;

--- a/src/Domain/Domain.csproj
+++ b/src/Domain/Domain.csproj
@@ -7,8 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Users\Aggregates\Account\" />
-    <Folder Include="Users\Aggregates\User\" />
+    <Compile Remove="Users\Aggregates\Account\**" />
+    <Compile Remove="Users\Aggregates\User\**" />
+    <EmbeddedResource Remove="Users\Aggregates\Account\**" />
+    <EmbeddedResource Remove="Users\Aggregates\User\**" />
+    <None Remove="Users\Aggregates\Account\**" />
+    <None Remove="Users\Aggregates\User\**" />
   </ItemGroup>
 
 </Project>
