Добавлено логгирование, а так-же логгинг хендлер. Но я не понимаю, почему не отображается контекст заброса (requestId), чтобы можно было понять, какие логи к какому контексту относятся.

--- a/src/API/appsettings.Development.json
+++ b/src/API/appsettings.Development.json
@@ -5,6 +5,18 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "Console": {
+    "FormatterName": "simple",
+    "FormatterOptions": {
+      "IncludeScopes": true,
+      "TimestampFormat": "[HH:mm:ss] ",
+      "SingleLine": true
+    },
+    "LogLevel": {
+      "Microsoft": "Warning",
+      "Default": "Information"
+    }
+  },
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=hello;Integrated Security=True;Connect Timeout=30;Encrypt=True;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
