--- a/src/API/appsettings.json
+++ b/src/API/appsettings.json
@@ -3,10 +3,22 @@
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
+    },
+    "Console": {
+      "FormatterName": "simple",
+      "FormatterOptions": {
+        "IncludeScopes": true,
+        "TimestampFormat": "[HH:mm:ss] ",
+        "SingleLine": true
+      }
     }
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=hello;Integrated Security=True;Connect Timeout=30;Encrypt=True;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
+  },
+  "RetryPolicy": {
+    "MaxAttempts": 5,
+    "BaseDelayMs": 100
   }
 }
