--- a/src/API/appsettings.json
+++ b/src/API/appsettings.json
@@ -1,17 +1,23 @@
 {
-  "Logging": {
-    "LogLevel": {
+  "Serilog": {
+    "MinimumLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    },
-    "Console": {
-      "FormatterName": "simple",
-      "FormatterOptions": {
-        "IncludeScopes": true,
-        "TimestampFormat": "[HH:mm:ss] ",
-        "SingleLine": true
+      "Override": {
+        "Microsoft": "Warning",
+        "System": "Error"
       }
-    }
+    },
+    "WriteTo": [
+      {
+        "Name": "Console",
+        "Args": { "formatter": "Serilog.Formatting.Json.JsonFormatter, Serilog" }
+      },
+      {
+        "Name": "Debug",
+        "Args": { "formatter": "Serilog.Formatting.Json.JsonFormatter, Serilog" }
+      }
+    ],
+    "Enrich": [ "FromLogContext" ]
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
