Добавление яндекс авторизации

--- a/src/API/appsettings.json
+++ b/src/API/appsettings.json
@@ -26,5 +26,11 @@
   "RetryPolicy": {
     "MaxAttempts": 5,
     "BaseDelayMs": 100
+  },
+  "Authentication": {
+    "Yandex": {
+      "ClientId": "9d402499894a44d3b91e01b3ce7963ff",
+      "ClientSecret": "65f2cf5826b3499cb012cba72093409c"
+    }
   }
 }
