--- a/src/API/API.csproj
+++ b/src/API/API.csproj
@@ -8,6 +8,7 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+		<PackageReference Include="AspNet.Security.OAuth.Yandex" Version="8.3.0" />
 		<PackageReference Include="MediatR" Version="13.0.0" />
 		<PackageReference Include="Serilog.AspNetCore" Version="9.0.0" />
 		<PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
